Fixed incorrect tag label
